fixed tests and fixtures after recreation List_Completed list

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,30 @@
 /tests/artifacts/
 /allure_results/
 /venv/
+/tests/0.4.17
+/tests/1.12.3
+/tests/3.0a5
+/tests/40.8.0
+/locust_files/__init__.py
+/tests/add_records_test/__init__.py
+/tests/add_records_test/add_records_a_duplicate_keys.py
+/tests/add_records_test/add_records_all_fields_are_correct.py
+/tests/add_records_test/add_records_empty_key_field.py
+/tests/add_records_test/add_records_incorrectly_formatted_date_time_number_in_a_date_time_field.py
+/tests/add_records_test/add_records_incorrectly_formatted_phone_number_country.py
+/tests/add_records_test/add_records_incorrectly_formatted_phone_number_in_a_caller_id_field.py
+/tests/add_records_test/add_records_incorrectly_formatted_phone_number_in_a_phone_field.py
+/tests/add_records_test/add_records_missing_req_field.py
+/tests/add_records_test/add_records_non_existent_agent_username_in_an_agent_login_id_field.py
+/tests/add_records_test/add_records_non_existent_field_name.py
+/tests/add_records_test/add_records_space_in_the_key_field.py
+/tests/add_records_test/add_records_with_a_date_time_field_set_to_a_moment_in_the_past.py
+/tests/add_records_test/add_records_with_incorrectly_formatted_value_in_an_integer_field.py
+/tests/add_records_test/add_records_without_a_phone_field_req.py
+/tests/add_records_test/add_records_without_a_phone_field_req_and_key.py
+/tests/add_records_test/add_records_without_a_phone_fields.py
+/tests/auth_load.py
+/locust_files/locust_file.py
+/main.py
+/.idea/workspace.xml
+/venv/
